# modern-python

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypi.ini  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: lint.yaml  precommit-update.yaml  test.yaml
tests/: test_main.py
