[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = "Modern setup for Python projects"
authors = ["Erick Daniszewski <edaniszewski@gmail.com>"]
packages = [{ include = "modern_python", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.16.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.1"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
mypy = "^0.940"
pre-commit = "^2.16.0"
pyupgrade = "^2.29.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
